# data-selection-prob

./: README.md  example_covertype_selection.ipynb  example_diabetes_selection.ipynb  example_fmnist_selection.ipynb  main.py  pyproject.toml  simple_pytorch.py
data/: 2dplanes.pkl  2dplanes_sv.pkl  click.pkl  click_sv.pkl  covertype.pkl  diabetes_sv.pkl  phoneme.pkl  phoneme_sv.pkl  vals.pkl  vals2.pkl  vals3.pkl
notebooks/: example_diabetes_selection.ipynb
scripts/: 101210.loh  data.py  log  log07  log07_2  log2  log4  lr.py  res  svm.py
scripts/preprocess/: image.py  tabular.py
src/: README.md
src/valda/: eval.py  params.py
